--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div class="content">%sveltekit.body%</div>
+		%sveltekit.body%
 	</body>
 </html>
