lazy images and preload fonts, fix flex mixin

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script
+			defer
+			src="/stats/script.js"
+			data-website-id="e82247ab-f7f5-44bc-a27b-0f2b08462811"
+		></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
